some deye validation fixex and some lastCallculation checks also fixed frontend graphs